Added some stuff for the Team Page
Its not done yet, it still looks all default-ish

--- a/assets/style.css
+++ b/assets/style.css
@@ -209,6 +209,19 @@ table.vtop th {
     height:45%;
 }
 
+.o-roster {
+    width:40%;
+    display: inline-block;
+    
+}
+.o-peeps{
+    height: 253px;
+    width: 189px;
+    overflow: hidden;
+    background-position: center;
+    
+}
+
 
 
 
