--- a/assets/style.css
+++ b/assets/style.css
@@ -19,11 +19,10 @@ body {
 	src: url("fonts/OpenSans/OpenSans-Light.ttf");
 }
 
-a		{color: #5458BC; text-decoration: underline;}
-a:visited	{color: #5458BC; text-decoration: underline;}
-a:hover		{color: #9E342C; text-decoration: underline;}
-a:visited:hover	{color: #9E342C; text-decoration: underline;}
-a:active	{color: #9E342C; text-decoration: underline;}
+a {color: #E9E581; }
+a:hover		{color: #DE1B1B; }
+a:visited:hover	{color: #9E342C;}
+a:active	{color: #9E342C; }
 
 a.nolink				{color: #000000; text-decoration: none;}
 a.nolink:visited		{color: #000000; text-decoration: none;}
@@ -58,19 +57,19 @@ table.vtop th {
 	text-shadow: 2px 2px 2px rgba(0, 0, 0, 1.0);
 	text-align: center;
 	font-size: 1.25rem;
-	height: 100%;
+	height: 90%;
 	transition-property: background-image, background-color;
 	transition-duration: 1s;
 	transition-delay: 2s;
 	transition-timing-function: linear;
 }
 .siteFrame {
-	background: #FFFFFF;
-	color: #3F3F3F;
+	background: #F6F6F6;
+	color: #2B2B2B;
 	text-align: center;
 }
 .siteFrame h1 {
-	color: #AF0000;
+	color: #E9E581;
 	text-shadow: 2px 2px 2px rgba(0,0,0,0.25);
 }
 .block1 {
@@ -96,7 +95,7 @@ table.vtop th {
 	margin-bottom: 64px;
 }
 .spacedSet > *:first-child {
-	margin-top: 64px;
+	margin-top: 15px;
 }
 
 .project {
@@ -149,8 +148,32 @@ table.vtop th {
     border-radius: 15%;
 }
 
+.nav-pills > li > a { color: #2B2B2B; text-decoration: bold; }
+
+.nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
+    color: #F6F6F6;
+    background-color: #DE1B1B;
+    border-radius: 1px;
+    
+}
+
+.o-tabs > a {
+    font-size: 22px;
+    text-decoration: none;
+    color: #2B2B2B;
+}
+
 .o-title {
     font-size: 72px;
+}
+
+.o-panel {
+    background-color: #2B2B2B;
+    color: #F6F6F6;
+    margin-bottom:20px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
 }
 
 .o-tagline {
