Added link to Playground and team titles
Realized that the 'team' page is also buggy as shit in Mozilla and needs
to be fixed.  Really starting to hate Firefox.

--- a/assets/style.css
+++ b/assets/style.css
@@ -258,6 +258,13 @@ table.vtop th {
     width: 20%;
 }
 
+.o-sandLink {
+    height: 15%;
+    position: absolute;
+    right: 0%;
+    top: 3%;
+}
+
 
 
 
