--- a/assets/style.css
+++ b/assets/style.css
@@ -65,6 +65,21 @@ table.vtop th {
 	transition-delay: 2s, 2s, 0s;
 	transition-timing-function: linear;
 }
+.titleLogo {
+	z-index: 1;
+	position: absolute;
+	top: 16px;
+	left: 16px;
+	width: 90px;
+	height: 90px;
+	background-image: url('dp_logo.png');
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-size: cover;
+	border: solid 5px #0E181E;
+	border-radius: 50%;
+	box-shadow: 2px 2px 16px 4px rgba(0, 0, 0, 0.25);
+}
 .titleArrow {
 	z-index: 1;
 	position: absolute;
