--- a/games/tower-defense/style.css
+++ b/games/tower-defense/style.css
@@ -169,8 +169,30 @@ table.layout > tbody > tr > th {
 	border-radius: 6px;
 	background: rgba(15, 15, 15, 0.75);
 	padding: 4px;
-	margin: 0px;
 }
+
+.loader {
+    margin-top: 20%;
+    margin-left: 45%;
+}
+
+.mainMenu {
+    padding: 5%;
+    text-align: center;
+    margin-top: 10%;
+    margin-left: 34%;
+}
+
+.title {
+    font: 30px helvetica, serif;
+    display: block;
+    padding-bottom: 5%;
+}
+
+.mainButton {
+    width: 20%;
+}
+
 .frame1 input {
 	border: solid 1px #9F9F9F;
 	border-radius: 4px;
