added a timer to show amount of time left in BUILD phase

--- a/games/tower-defense/style.css
+++ b/games/tower-defense/style.css
@@ -359,6 +359,14 @@ table.layout > tbody > tr > th {
 	background-color: #4F0000;
 }
 
+#ingameOverlay .countdown {
+	display: inline-block;
+	float: center;
+	font-size: 18px;
+	font-weight: bold;
+	color: #FF0000;
+}
+
 .userInfo .balance {
 	color: #FFFF00;
 	font-family: monospace;
