Many new features and assets

--- a/games/tower-defense/style.css
+++ b/games/tower-defense/style.css
@@ -388,7 +388,8 @@ table.layout > tbody > tr > th {
 	border-color: #DFDFDF;
 }
 
-.shopInfo .preview {
+.shopInfo .preview,
+.selection .preview {
 	display: inline-block;
 	float: right;
 	width: 64px;
